slider spacing fix

--- a/style.css
+++ b/style.css
@@ -74,7 +74,6 @@ p {
 }
 
 #slider {
-  padding-top: 1rem;
   width: 100%;
   min-width: 200px;
 }
